@@ -18,7 +18,7 @@
                 prefPanel = id; 
                 promptOnClose = id; 
                 silenceBell = id; 
-                tabViewType = id; 
+                tabPosition = NSMatrix; 
             }; 
             SUPERCLASS = NSResponder; 
         }
